// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Recommend Azure VM sizes, VM Scale Sets (VMSS), and configurations based on workload requirements, performance needs, and budget constraints. No Azure account required — uses public documentation and the Azure Retail Prices API. USE FOR: recommend VM size, which VM should I use, choose Azure VM, VM for web/database/ML/batch/HPC, GPU VM, compare VM sizes, cheapest VM, best VM for workload, VM pricing, cost estimate, burstable/compute/memory/storage optimized VM, confidential computing, VM trade-offs, VM families, VMSS, scale set recommendation, autoscale VMs, load balanced VMs, VMSS vs VM, scale out, horizontal scaling, flexible orchestration. DO NOT USE FOR: deploying VMs or VMSS, deploying apps (use azure-deploy), looking up existing VMs (use azure-resource-lookup), cost optimization of running VMs (use azure-cost-optimization), non-VM services like App Service or AKS.",
  "extractedKeywords": [
    "account",
    "apps",
    "autoscale",
    "azure",
    "azure-cost-optimization",
    "azure-deploy",
    "azure-resource-lookup",
    "balanced",
    "based",
    "batch",
    "best",
    "budget",
    "burstable",
    "cheapest",
    "choose",
    "compare",
    "compute",
    "computing",
    "confidential",
    "configurations",
    "constraints",
    "cost",
    "database",
    "deploying",
    "documentation",
    "estimate",
    "existing",
    "families",
    "flexible",
    "horizontal",
    "like",
    "load",
    "looking",
    "memory",
    "monitor",
    "needs",
    "networking",
    "non-vm",
    "optimization",
    "optimized",
    "orchestration",
    "performance",
    "prices",
    "pricing",
    "public",
    "recommend",
    "recommendation",
    "required",
    "requirements",
    "retail",
    "running",
    "scale",
    "scaling",
    "service",
    "services",
    "sets",
    "should",
    "size",
    "sizes",
    "storage",
    "trade-offs",
    "uses",
    "vmss",
    "which",
    "workload",
  ],
  "name": "azure-compute",
}
`;

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "account",
  "apps",
  "autoscale",
  "azure",
  "azure-cost-optimization",
  "azure-deploy",
  "azure-resource-lookup",
  "balanced",
  "based",
  "batch",
  "best",
  "budget",
  "burstable",
  "cheapest",
  "choose",
  "compare",
  "compute",
  "computing",
  "confidential",
  "configurations",
  "constraints",
  "cost",
  "database",
  "deploying",
  "documentation",
  "estimate",
  "existing",
  "families",
  "flexible",
  "horizontal",
  "like",
  "load",
  "looking",
  "memory",
  "monitor",
  "needs",
  "networking",
  "non-vm",
  "optimization",
  "optimized",
  "orchestration",
  "performance",
  "prices",
  "pricing",
  "public",
  "recommend",
  "recommendation",
  "required",
  "requirements",
  "retail",
  "running",
  "scale",
  "scaling",
  "service",
  "services",
  "sets",
  "should",
  "size",
  "sizes",
  "storage",
  "trade-offs",
  "uses",
  "vmss",
  "which",
  "workload",
]
`;
